Edited wiki page LdPush through web user interface.

--- a/wiki/LdPush.wiki
+++ b/wiki/LdPush.wiki
@@ -1,3 +1,5 @@
+#Multi-Platform Configuration Push Tool 
+
 = Multi-Platform Configuration Push Tool =
 A common request from Capirca users has been the need for a multi-platform "push" tool.  Ryan Shea, a fellow Googler, has a project that meets this objective.  You can find the code and documentation for this tool at the following code page:
 
