--- a/wiki/LdPush.wiki
+++ b/wiki/LdPush.wiki
@@ -1,4 +1,4 @@
-#Multi-Platform Configuration Push Tool 
+#Summary Multi-Platform Configuration Push Tool 
 
 = Multi-Platform Configuration Push Tool =
 A common request from Capirca users has been the need for a multi-platform "push" tool.  Ryan Shea, a fellow Googler, has a project that meets this objective.  You can find the code and documentation for this tool at the following code page:
